--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,98 @@
 
+@Article{	  becker2025incoherenta,
+  author	= {Becker, Michael and Franchetto, Bruna and Kuikuro, Arawa
+		  Didi and Mehinaku Kuikuro, Yanapa and Petrovic, Andrija},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The Incoherent Stress of Kuikuro},
+  year		= {2025}
+}
+
+@Article{	  humphries2019support,
+  author	= {Humphries, Tom and Kushalnagar, Poorna and Mathur, Gaurav
+		  and Napoli, Donna Jo and Rathmann, Christian and Smith,
+		  Scott},
+  journal	= {International Journal of Pediatric Otorhinolaryngology},
+  pages		= {134--142},
+  title		= {Support for Parents of Deaf Children: Common Questions and
+		  Informed, Evidence-Based Answers},
+  volume	= {118},
+  year		= {2019}
+}
+
+@Article{	  schlenker2017supera,
+  author	= {Schlenker, Philippe},
+  journal	= {Semantics and Pragmatics},
+  pages		= {12:EA--12:EA},
+  title		= {Super Monsters {II}: Role Shift, Iconicity and Quotation
+		  in Sign Language},
+  volume	= {10},
+  year		= {2017}
+}
+
+@Article{	  schlenker2017sign,
+  author	= {Schlenker, Philippe},
+  journal	= {Annual Review of Linguistics},
+  pages		= {149--177},
+  title		= {Sign Language and the Foundations of Anaphora},
+  volume	= {3},
+  year		= {2017}
+}
+
+@Article{	  schlenker2016featural,
+  author	= {Schlenker, Philippe},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {3},
+  pages		= {1067--1088},
+  title		= {Featural Variables},
+  volume	= {34},
+  year		= {2016}
+}
+
+@Article{	  napoli2015should,
+  author	= {Napoli, Donna Jo and Mellon, Nancy K. and Niparko, John K.
+		  and Rathmann, Christian and Mathur, Gaurav and Humphries,
+		  Tom and Handley, Theresa and Scambler, Sasha and Lantos,
+		  John D.},
+  journal	= {Pediatrics},
+  number	= {1},
+  pages		= {170--176},
+  title		= {Should All Deaf Children Learn Sign Language?},
+  volume	= {136},
+  year		= {2015}
+}
+
+@Article{	  schlenker2004conditionals,
+  author	= {Schlenker, Philippe},
+  journal	= {Research on Language and Computation},
+  number	= {3},
+  pages		= {417--462},
+  title		= {Conditionals as Definite Descriptions},
+  volume	= {2},
+  year		= {2004}
+}
+
+@InBook{	  bittner2001topical,
+  address	= {Ithaca, NY},
+  author	= {Bittner, Maria},
+  booktitle	= {11},
+  editor	= {Hastings, Rachel and Jackson, Brendan and Zvolenszky,
+		  Zsofia},
+  pages		= {36-55},
+  publisher	= {Cornell University},
+  title		= {Topical Referents for Individuals and Possibilities
+		  Proceedings of {SALT} {XI}},
+  year		= {2001}
+}
+
+@Article{	  stone1997anaphorica,
+  author	= {Stone, Matthew},
+  journal	= {University of Pennsylvania Department of Computer and
+		  Information Science Technical Report},
+  title		= {The Anaphoric Parallel Between Modality and Tense},
+  volume	= {MS-CIS-97-09},
+  year		= {1997}
+}
+
 @Article{	  marantz1997no,
   author	= {Marantz, Alec},
   journal	= {University of Pennsylvania Working Papers in Linguistics},
