--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Book{		  kuteva2019world,
+  author	= {Kuteva, Tania and Heine, Bernd and Hong, Bo and Long,
+		  Haiping and Narrog, Heiko and Rhee, Seongha},
+  publisher	= {Cambridge University Press},
+  title		= {World Lexicon of Grammaticalization},
+  year		= {2019}
+}
+
+@Book{		  kuteva2008auxiliation,
+  address	= {Oxford},
+  author	= {Kuteva, Tania},
+  publisher	= {Oxford Univ. Press},
+  title		= {Auxiliation: An Enqiry into the Nature of
+		  Grammaticalization},
+  year		= {2008}
+}
+
+@Book{		  eckardt2006meaning,
+  address	= {Oxford ; New York},
+  author	= {Eckardt, Regine},
+  publisher	= {Oxford University Press},
+  title		= {Meaning Change in Grammaticalization: An Enquiry into
+		  Semantic Reanalysis},
+  year		= {2006}
+}
+
 @Article{	  becker2025incoherenta,
   author	= {Becker, Michael and Franchetto, Bruna and Kuikuro, Arawa
 		  Didi and Mehinaku Kuikuro, Yanapa and Petrovic, Andrija},
