--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  gotham2018making,
+  author	= {Gotham, Matthew},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {511--556},
+  title		= {Making Logical Form Type-Logical: Glue Semantics for
+		  Minimalist Syntax},
+  volume	= {41},
+  year		= {2018}
+}
+
+@InBook{	  fox2003logical,
+  author	= {Fox, Danny},
+  booktitle	= {Minimalist Syntax},
+  editor	= {Hendrick, Randall},
+  pages		= {82-123},
+  publisher	= {John Wiley and Sons, Ltd},
+  title		= {On Logical Form},
+  year		= {2003}
+}
+
 @Book{		  kuteva2019world,
   author	= {Kuteva, Tania and Heine, Bernd and Hong, Bo and Long,
 		  Haiping and Narrog, Heiko and Rhee, Seongha},
