--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  schlenker2022what,
+  address	= {Cambridge, Massachusetts},
+  author	= {Schlenker, Philippe},
+  publisher	= {The MIT Press},
+  title		= {What it all means: semantics for (almost) everything},
+  year		= {2022}
+}
+
 @Article{	  gotham2018making,
   author	= {Gotham, Matthew},
   journal	= {Linguistics and Philosophy},
