--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,169 @@
 
+@Article{	  enguehard2025pragmatic,
+  author	= {Enguehard, {\"E}mile},
+  journal	= {Linguistics and Philosophy},
+  title		= {Towards a Pragmatic Explanation for the Prevalence of
+		  Upward-Monotonicity in Natural Language: Some Results on
+		  Communicative Stability, the Strongest Answer Condition,
+		  and Exhaustification},
+  year		= {2025}
+}
+
+@Article{	  chen2025syntax,
+  author	= {Chen, Victoria},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {3},
+  pages		= {1839--1898},
+  title		= {The Syntax of Philippine-type Alignment: Insights from
+		  Case-Marking},
+  volume	= {43},
+  year		= {2025}
+}
+
+@PhDThesis{	  jambrovic2025structure,
+  author	= {Jambrovi{\'c}, Samuel},
+  school	= {University of Toronto (Canada)},
+  title		= {The Structure and Interpretation of (pro)Nominal
+		  Expressions in Spanish},
+  year		= {2025}
+}
+
+@Article{	  brodkin2025prosody,
+  author	= {Brodkin, Dan},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {3},
+  pages		= {1239--1284},
+  title		= {The Prosody of the Extended {VP}},
+  volume	= {43},
+  year		= {2025}
+}
+
+@Article{	  schlenker2025inferential,
+  author	= {Schlenker, Philippe and Lamberton, Jason and Lamberton,
+		  Jonathan},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {3},
+  pages		= {2039--2100},
+  title		= {The Inferential Typology of Language: Insights from Sign
+		  Language ({ASL})},
+  volume	= {43},
+  year		= {2025}
+}
+
+@Article{	  takahashi2025relative,
+  author	= {Takahashi, Maho and Goodall, Grant},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Relative Clauses Are Islands in Japanese: The Case of
+		  Double Relatives},
+  year		= {2025}
+}
+
+@Article{	  jin2025reassessing,
+  author	= {Jin, Dawei and Yan, Hanbo},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {3},
+  pages		= {1327--1363},
+  title		= {Reassessing the Argument--Adjunct Asymmetry in Wh-in-Situ
+		  Islands in Mandarin: An Experimental Investigation},
+  volume	= {43},
+  year		= {2025}
+}
+
+@Book{		  marcolli2025mathematical,
+  address	= {Cambridge, Massachusetts},
+  author	= {Marcolli, Matilde and Chomsky, Noam and Berwick, Robert
+		  C.},
+  publisher	= {The MIT Press},
+  title		= {Mathematical Structure of Syntactic Merge: An Algebraic
+		  Model for Generative Linguistics},
+  year		= {2025}
+}
+
+@Article{	  ke2025lack,
+  author	= {Ke, Alan Hezao and McInnerney, Andrew and Sugimoto,
+		  Yushi},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {3},
+  pages		= {2139--2178},
+  title		= {Lack of C-Command in Coordinate Structures: Evidence from
+		  Binding},
+  volume	= {43},
+  year		= {2025}
+}
+
+@Article{	  vonfintel2025attitudes,
+  author	= {von Fintel, Kai and Pasternak, Robert},
+  journal	= {Linguistics and Philosophy},
+  title		= {Attitudes, Aboutness, and Indirect Restriction},
+  year		= {2025}
+}
+
+@Article{	  paille2025interaction,
+  author	= {Paill{\'e}, Mathieu},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {89--140},
+  title		= {An Interaction between Logical Vocabulary and Predicate
+		  Meanings},
+  volume	= {48},
+  year		= {2025}
+}
+
+@Article{	  blokpoel2019deep,
+  author	= {Blokpoel, Mark and Wareham, Todd and Haselager, Pim and
+		  Toni, Ivan and Van Rooij, Iris},
+  journal	= {The Journal of Problem Solving},
+  number	= {1},
+  title		= {Deep Analogical Inference as the Origin of Hypotheses},
+  volume	= {11},
+  year		= {2019}
+}
+
+@Article{	  villalta2008mood,
+  author	= {Villalta, Elisabeth},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {467--522},
+  title		= {Mood and Gradability: An Investigation of the Subjunctive
+		  Mood in Spanish},
+  volume	= {31},
+  year		= {2008}
+}
+
+@InBook{	  janssen2025montague,
+  author	= {Janssen, Theo M. V. and Zimmermann, Thomas Ede},
+  editor	= {Zalta, Edward N. and Nodelman, Uri},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Montague Semantics The Stanford Encyclopedia of
+		  Philosophy},
+  year		= {2025}
+}
+
+@InBook{	  hamm2024tense,
+  author	= {Hamm, Friedrich and Bott, Oliver},
+  editor	= {Zalta, Edward N. and Nodelman, Uri},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Tense and Aspect The Stanford Encyclopedia of Philosophy},
+  year		= {2024}
+}
+
+@InBook{	  westerstahl2024generalized,
+  author	= {Westerst{\aa}hl, Dag},
+  editor	= {Zalta, Edward N. and Nodelman, Uri},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Generalized Quantifiers The Stanford Encyclopedia of
+		  Philosophy},
+  year		= {2024}
+}
+
+@InBook{	  szabo2024compositionality,
+  author	= {Szab{\'o}, Zolt{\'a}n Gendler},
+  editor	= {Zalta, Edward N. and Nodelman, Uri},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Compositionality The Stanford Encyclopedia of Philosophy},
+  year		= {2024}
+}
+
 @Book{		  schlenker2022what,
   address	= {Cambridge, Massachusetts},
   author	= {Schlenker, Philippe},
