--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,55 @@
 
+@Article{	  ivy2025three,
+  author	= {Ivy, Spencer and Mroczko-W{\k a}sowicz, Aleksandra},
+  journal	= {Synthese},
+  number	= {2},
+  pages		= {96},
+  title		= {Three Grades of Subject-Dependency in Object Perception},
+  volume	= {206},
+  year		= {2025}
+}
+
+@Unpublished{	  coppock2025invitation,
+  author	= {Coppock, Elizabeth and Champollion, Lucas},
+  title		= {Invitation to Formal Semantics},
+  year		= {2025}
+}
+
+@Article{	  tamura2025compounding,
+  author	= {Tamura, Jun},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Compounding Words in the Syntax Can Produce Phrasal
+		  Phonology: Evidence from Japanese Aoyagi Morphemes},
+  year		= {2025}
+}
+
+@Book{		  antony2022only,
+  address	= {New York, NY},
+  author	= {Antony, Louise M.},
+  publisher	= {Oxford University Press},
+  title		= {Only Natural: Gender, Knowledge, and Humankind},
+  year		= {2022}
+}
+
+@Book{		  sportiche2014introduction,
+  address	= {Malden, MA},
+  author	= {Sportiche, Dominique and Koopman, Hilda Judith and
+		  Stabler, Edward P.},
+  publisher	= {Wiley/Blackwell},
+  title		= {An Introduction to Syntactic Analysis and Theory},
+  year		= {2014}
+}
+
+@Book{		  ackema2004morphology,
+  address	= {Oxford ; New York},
+  author	= {Ackema, Peter and Neeleman, Ad},
+  publisher	= {Oxford University Press},
+  title		= {Beyond Morphology: Interface Conditions on Word
+		  Formation},
+  volume	= {(6)},
+  year		= {2004}
+}
+
 @Article{	  enguehard2025pragmatic,
   author	= {Enguehard, {\"E}mile},
   journal	= {Linguistics and Philosophy},
