--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  kaur2025new,
+  author	= {Kaur, Gurmeet and Sinha, Yash},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {A New Approach to Plurals-of-Politeness and Their Number
+		  Agreement},
+  year		= {2025},
+  doi		= {10.1007/s11049-025-09680-6}
+}
+
+@Article{	  sag2025novel,
+  author	= {Sa{\u g}, Ya{\u g}mur and Demirok, {\"O}mer and Bal,
+		  Muhammet},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {A Novel Architecture for Pseudo-Incorporation},
+  year		= {2025},
+  doi		= {10.1007/s11049-025-09683-3}
+}
+
 @Article{	  ivy2025three,
   author	= {Ivy, Spencer and Mroczko-W{\k a}sowicz, Aleksandra},
   journal	= {Synthese},
