--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@Article{	  amato2025apparent,
+  author	= {Amato, Irene},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Apparent Minimality Violations Solved by Nested Agree},
+  year		= {2025}
+}
+
+@Article{	  smith2025state,
+  author	= {Smith, Ryan Walter and Hopperdietzel, Jens and
+		  Koontz-Garboden, Andrew},
+  journal	= {Natural Language Semantics},
+  number	= {3},
+  pages		= {329--361},
+  title		= {From State to Change of State by Type-Shift},
+  volume	= {33},
+  year		= {2025}
+}
+
+@Article{	  donati2025additivity,
+  author	= {Don{\'a}ti, Fl{\'o}ra Lili and Sudo, Yasutada},
+  journal	= {Natural Language Semantics},
+  number	= {3},
+  pages		= {291--327},
+  title		= {Additivity, Accommodation, and Alternatives},
+  volume	= {33},
+  year		= {2025}
+}
+
+@Article{	  kripke2009presuppositiona,
+  author	= {Kripke, Saul A.},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {367--386},
+  title		= {Presupposition and Anaphora: Remarks on the Formulation of
+		  the Projection Problem},
+  volume	= {40},
+  year		= {2009}
+}
+
 @Article{	  kaur2025new,
   author	= {Kaur, Gurmeet and Sinha, Yash},
   journal	= {Natural Language \& Linguistic Theory},
