--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  jarvis2025semantics,
+  author	= {Jarvis, Rebecca},
+  journal	= {Natural Language Semantics},
+  title		= {Semantics of Obviation in {{Atchan}}: Disjointness and
+		  Long-Distance Obligatory Binding},
+  year		= {2025},
+  doi		= {10.1007/s11050-025-09238-7}
+}
+
 @Article{	  amato2025apparent,
   author	= {Amato, Irene},
   journal	= {Natural Language and Linguistic Theory},
