--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Article{	  wu2025status,
+  author	= {Wu, Hsiao-hung Iris},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The Status and Distribution of Clausal Arguments: The Case
+		  of Mandarin Chinese},
+  year		= {2025}
+}
+
+@Article{	  palmieri2025lexical,
+  author	= {Palmieri, Giada and Basso, Renato and Nieto~i~Bou,
+		  J{\'u}lia and Winter, Yoad and Zwarts, Joost},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Lexical and Grammatical Arity-Reduction: The Case of
+		  Reciprocity in Romance Languages},
+  year		= {2025}
+}
+
+@Article{	  blumberg2025semantic,
+  author	= {Blumberg, Kyle and Goldstein, Simon},
+  journal	= {Linguistics and Philosophy},
+  title		= {A Semantic Theory of Redundancy},
+  year		= {2025}
+}
+
 @Article{	  jarvis2025semantics,
   author	= {Jarvis, Rebecca},
   journal	= {Natural Language Semantics},
