--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  baglini2025modeling,
+  author	= {Baglini, Rebekah and Bar-Asher Siegal, Elitzur A.},
+  journal	= {Linguistics and Philosophy},
+  title		= {Modeling Linguistic Causation},
+  year		= {2025}
+}
+
+@InBook{	  bosque2024nouns,
+  author	= {Bosque, Ignacio},
+  booktitle	= {Manual of Romance Word Classes},
+  editor	= {De Cesare, Anna-Maria and Salvi, Giampaolo},
+  pages		= {117-146},
+  publisher	= {De Gruyter},
+  title		= {Nouns},
+  year		= {2024}
+}
+
 @Article{	  wu2025status,
   author	= {Wu, Hsiao-hung Iris},
   journal	= {Natural Language and Linguistic Theory},
