--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  matthewson2025polar,
+  author	= {Matthewson, Lisa},
+  journal	= {Natural Language Semantics},
+  title		= {Polar Questions in Nɬeʔkepmxc{\'i}n: Monopolar, Bipolar,
+		  and Exhaustive},
+  year		= {2025}
+}
+
 @Article{	  baglini2025modeling,
   author	= {Baglini, Rebekah and Bar-Asher Siegal, Elitzur A.},
   journal	= {Linguistics and Philosophy},
