--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@InBook{	  plann1986substantive,
+  author	= {Plann, Susan},
+  booktitle	= {Generative Studies in Spanish syntax},
+  editor	= {Bordelois, Ivonne and Contreras, Heles},
+  pages		= {121-142},
+  publisher	= {De Gruyter Mouton},
+  title		= {Substantive: A Neutralized Syntactic Category in Spanish
+		  Generative Studies in Spanish Syntax},
+  year		= {1986}
+}
+
+@Book{		  bordelois1986generative,
+  editor	= {Bordelois, Ivonne and Contreras, Heles},
+  publisher	= {De Gruyter Mouton},
+  title		= {Generative {{Studies}} in {{Spanish}} Syntax},
+  year		= {1986},
+  doi		= {10.1515/9783110859232}
+}
+
+@Article{	  mccawley1988adverbial,
+  author	= {McCawley, James D.},
+  journal	= {Language},
+  number	= {3},
+  pages		= {583--590},
+  title		= {Adverbial {NP}s: Bare or Clad in See-Through Garb?},
+  volume	= {64},
+  year		= {1988}
+}
+
+@Article{	  larson1985barenp,
+  author	= {Larson, Richard K.},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {595--621},
+  title		= {Bare-NP Adverbs},
+  volume	= {16},
+  year		= {1985}
+}
+
 @Article{	  matthewson2025polar,
   author	= {Matthewson, Lisa},
   journal	= {Natural Language Semantics},
