--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  cardona2025interaction,
+  author	= {Cardona, Leonardo Russo and Villalba, Xavier},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The Interaction between Clause Size and Voice: Evidence
+		  from Catalan and Italian},
+  volume	= {10},
+  year		= {2025}
+}
+
+@Article{	  nam2025korean,
+  author	= {Nam, Stanley},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Korean Honorific Agreement as the Marginal Requirement for
+		  Syntactic Finiteness},
+  volume	= {10},
+  year		= {2025}
+}
+
 @InBook{	  plann1986substantive,
   author	= {Plann, Susan},
   booktitle	= {Generative Studies in Spanish syntax},
