--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,216 @@
 
+@Article{	  deal2025uncentered,
+  author	= {Deal, Amy Rose},
+  journal	= {Journal of Semantics},
+  title		= {Uncentered Attitude Reports},
+  year		= {2025}
+}
+
+@Article{	  angelopoulos2025treating,
+  author	= {Angelopoulos, Nikos and Sportiche, Dominique},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {631--661},
+  title		= {Treating Greek o Eaftos Mu as a Regular Anaphor:
+		  Theoretical Implications},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  dayal2025interrogative,
+  author	= {Dayal, Veneeta},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {663--712},
+  title		= {The Interrogative Left Periphery: How a Clause Becomes a
+		  Question},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  sichel2025featural,
+  author	= {Sichel, Ivy and Toosarvandani, Maziar},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {751--806},
+  title		= {The Featural Life of Nominals},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  mcinnerney2025argument,
+  author	= {McInnerney, Andrew},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {817--829},
+  title		= {The Argument/Adjunct Distinction Does Not Condition
+		  Islandhood of {PP}s in English},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  blumel2025smuggling,
+  author	= {Bl{\"u}mel, Andreas and Collins, Chris},
+  journal	= {Biolinguistics},
+  pages		= {1--8},
+  title		= {Smuggling and Labeling Theory},
+  volume	= {19},
+  year		= {2025}
+}
+
+@Book{		  rae-asale2025nuevaa,
+  address	= {Madrid},
+  author	= {RAE-ASALE},
+  publisher	= {Planeta Libros. Espasa Calpe},
+  title		= {Nueva Gram{\'a}tica de La Lengua Espa{\~n}ola.
+		  Fon{\'e}tica y Fonolog\'ia},
+  year		= {2025}
+}
+
+@Article{	  rasin2025morpheme,
+  author	= {Rasin, Ezer},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {713--749},
+  title		= {Morpheme Structure Constraints Solve Three Puzzles for
+		  Theories of Blocking in Nonderived Environments},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Book{		  borg2025meaning,
+  author	= {Borg, Emma and Fisher, Sarah A.},
+  publisher	= {Oxfford university press},
+  title		= {Meaning},
+  year		= {2025}
+}
+
+@Article{	  vera2025evidentiality,
+  author	= {Mart{\'i}nez Vera, Gabriel and Camacho, Jos{\'e}},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Evidentiality and Focus in Colombian Spanish: A
+		  Comparative Analysis of Dizque and Como Que},
+  volume	= {10},
+  year		= {2025}
+}
+
+@Article{	  jardine2025computing,
+  author	= {Jardine, Adam and Oakden, Christopher},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {807--816},
+  title		= {Computing Process-Specific Constraints},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  schlenker2025ancestral,
+  author	= {Schlenker, Philippe and Pawlowitsch, Christina and Arnal,
+		  Luc H. and Chatain, Keny and Ravaux, Lucie and Ryder, Robin
+		  and Salis, Ambre and Steinert-Threlkeld, Shane and Wang,
+		  L{\'e}o and Chemla, Emmanuel},
+  journal	= {Linguistics and Philosophy},
+  title		= {Ancestral Meanings: A Prelude to Evolutionary Animal
+		  Linguistics},
+  year		= {2025}
+}
+
+@Article{	  messick20253,
+  author	= {Messick, Troy},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {830--844},
+  title		= {3/4 of a Monster: On Mixed Shifty Agreement in Telugu},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  koulidobrova2024not,
+  author	= {Koulidobrova, Elena and Mart\'inez Vera, Gabriel},
+  journal	= {Language Acquisition},
+  pages		= {1--30},
+  title		= {Not a Matter of a Degree: American Sign Language ({ASL})
+		  Signing Children and Acquisition of Gradability},
+  year		= {2024}
+}
+
+@Article{	  vera2021degree,
+  author	= {Mart{\'i}nez Vera, Gabriel},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Degree Achievements and Maximalization: A Cross-Linguistic
+		  Perspective},
+  volume	= {6},
+  year		= {2021}
+}
+
+@Book{		  bochnak2015methodologies,
+  address	= {New York},
+  editor	= {Bochnak, M. Ryan and Matthewson, Lisa},
+  publisher	= {Oxford University Press},
+  title		= {Methodologies in Semantic Fieldwork},
+  year		= {2015}
+}
+
+@Article{	  blasiak2009combinatorial,
+  author	= {Blasiak, Pawel},
+  journal	= {Discrete Mathematics \\& Theoretical Computer Science},
+  pages		= {481},
+  title		= {Combinatorial Route to Algebra: The Art of Composition \\&
+		  Decomposition},
+  volume	= {Vol. 12 no. 2},
+  year		= {2009}
+}
+
+@Article{	  pinzin2025wordorder,
+  author	= {Pinzin, Francesco and Mattiuzzi, Tommaso},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Word-Order Information in the Lexicon},
+  volume	= {10},
+  year		= {2025}
+}
+
+@Article{	  illingworth2025when,
+  author	= {Illingworth, Caitlin and Kang, Jee Won Diane and Gibbs,
+		  Haley and Davidson, Kathryn and Feiman, Roman},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {When the Syntactic Bootstrap Breaks: Some Children Think
+		  Any Means No},
+  volume	= {10},
+  year		= {2025}
+}
+
+@Article{	  yli-vakkuri2013propositions,
+  author	= {Yli‐Vakkuri, Juhani},
+  journal	= {Philosophical Perspectives},
+  number	= {1},
+  pages		= {526--563},
+  title		= {{PROPOSITIONS} {AND} {COMPOSITIONALITY}},
+  volume	= {27},
+  year		= {2025}
+}
+
+@Article{	  wehbe2025covert,
+  author	= {Wehbe, Jad},
+  journal	= {Natural Language Semantics},
+  title		= {Covert Reciprocals: A Scope-Based Analysis of Reciprocal
+		  Alternations},
+  year		= {2025}
+}
+
+@InBook{	  wiltschko2017response,
+  author	= {Wiltschko, Martina},
+  booktitle	= {Order and structure in syntax {I}: Word order and
+		  syntactic structure},
+  editor	= {Bailey, Laura and Sheehan, Michelle},
+  publisher	= {Language Science Press},
+  title		= {Response Particles Beyond Answering},
+  year		= {2017}
+}
+
 @Article{	  cardona2025interaction,
   author	= {Cardona, Leonardo Russo and Villalba, Xavier},
   journal	= {Glossa: a journal of general linguistics},
