--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Article{	  fabregas2025spanish,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {1--158},
+  title		= {Spanish Null Subjects: Descriptive and Analytical Issues},
+  volume	= {14},
+  year		= {2025},
+  doi		= {10.7557/1.14.2.8246}
+}
+
+@Article{	  lopez2025if,
+  author	= {L{\'o}pez, Luis},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {185--209},
+  title		= {If Agreement Is Pronominal There Is No Pro-Drop},
+  volume	= {14},
+  year		= {2025},
+  doi		= {10.7557/1.14.2.8293}
+}
+
 @Article{	  futrell2025how,
   author	= {Futrell, Richard and Mahowald, Kyle},
   journal	= {Behavioral and Brain Sciences},
