--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  larson2012dilemma,
+  author	= {Larson, Bradley},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {143--150},
+  title		= {A Dilemma with Accounts of Right Node Raising},
+  volume	= {43},
+  year		= {2012}
+}
+
+@Article{	  larson2018right,
+  author	= {Larson, Brooke},
+  journal	= {Studia Linguistica},
+  number	= {2},
+  pages		= {214--260},
+  title		= {Right {{Node Raising}} and {{Nongrammaticality}}},
+  volume	= {72},
+  year		= {2018},
+  doi		= {10.1111/stul.12060}
+}
+
 @Article{	  fabregas2025spanish,
   author	= {F{\'a}bregas, Antonio},
   journal	= {Borealis -- An International Journal of Hispanic
