--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  eguren2010contrastive,
+  author	= {Eguren, Luis},
+  journal	= {Lingua},
+  number	= {2},
+  pages		= {435--457},
+  series	= {Verb {{First}}, {{Verb Second}}},
+  title		= {Contrastive Focus and Nominal Ellipsis in {{Spanish}}},
+  volume	= {120},
+  year		= {2010},
+  doi		= {10.1016/j.lingua.2009.05.004}
+}
+
 @Article{	  larson2012dilemma,
   author	= {Larson, Bradley},
   journal	= {Linguistic Inquiry},
