--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,157 @@
 
+@Article{	  abbou2017typographies,
+  author	= {Abbou, Julie},
+  journal	= {Mots. Les langages du politique},
+  number	= {113},
+  pages		= {53--72},
+  publisher	= {ENS \'Editions},
+  title		= {{(Typo)graphies anarchistes. O\`u le genre r\'ev\`ele
+		  l'espace politique de la langue}},
+  year		= {2017},
+  doi		= {10.4000/mots.22637}
+}
+
+@Article{	  abbou2023inclusive,
+  author	= {Abbou, Julie},
+  journal	= {Gender and Language},
+  number	= {2},
+  pages		= {148--173},
+  title		= {Inclusive Writing},
+  volume	= {17},
+  year		= {2023},
+  doi		= {10.1558/genl.20021}
+}
+
+@InCollection{	  abbou2025devenir,
+  address	= {Montr\'eal},
+  author	= {Abbou, Julie and Burnett, Heather},
+  booktitle	= {{(Re)donner la parole aux corpus montr\'ealais: regards
+		  r\'etrospectif et prospectif}},
+  editor	= {Blondeau, H{\'e}l{\`e}ne and Laforest, Marty and Remysen,
+		  Wim},
+  publisher	= {Les Presses de l'Universit\'e de Montr\'eal},
+  title		= {{Devenir f\'eministe et queer \`a Paris et Montr\'eal:
+		  R\'ecits de vie dans le corpus CaF\'e}},
+  year		= {2025}
+}
+
+@Article{	  bendifallah2025conceptual,
+  author	= {Bendifallah, Lina and Abbou, Julie and Douven, Igor and
+		  Burnett, Heather},
+  journal	= {Review of Philosophy and Psychology},
+  number	= {1},
+  pages		= {199--229},
+  title		= {Conceptual {{Spaces}} for {{Conceptual Engineering}}?
+		  {{Feminism}} as a {{Case Study}}},
+  volume	= {16},
+  year		= {2025},
+  doi		= {10.1007/s13164-023-00708-7}
+}
+
+@Article{	  bondarenko2025source,
+  author	= {Bondarenko, Tatiana},
+  journal	= {Natural Language Semantics},
+  number	= {4},
+  pages		= {619--662},
+  title		= {On the Source of Displacement: Two Meanings of Embedded
+		  {{CPs}}},
+  volume	= {33},
+  year		= {2025},
+  doi		= {10.1007/s11050-025-09241-y}
+}
+
+@Article{	  burnett2021political,
+  author	= {Burnett, Heather and Pozniak, C{\'e}line},
+  journal	= {Journal of Sociolinguistics},
+  number	= {5},
+  pages		= {808--831},
+  title		= {Political Dimensions of Gender Inclusive Writing in
+		  {{Parisian}} Universities},
+  volume	= {25},
+  year		= {2021},
+  doi		= {10.1111/josl.12489}
+}
+
+@Article{	  burnett2024analyzing,
+  author	= {Burnett, Heather and Abbou, Julie and Thiberge, Gabriel},
+  journal	= {Journal of Sociolinguistics},
+  number	= {4},
+  pages		= {40--63},
+  title		= {Analyzing Linguistic Variation Using Discursive Worlds},
+  volume	= {28},
+  year		= {2024},
+  doi		= {10.1111/josl.12672}
+}
+
+@Article{	  eckert2012three,
+  author	= {Eckert, Penelope},
+  journal	= {Annual Review of Anthropology},
+  number	= {Volume 41, 2012},
+  pages		= {87--100},
+  publisher	= {Annual Reviews},
+  title		= {Three {{Waves}} of {{Variation Study}}: {{The Emergence}}
+		  of {{Meaning}} in the {{Study}} of {{Sociolinguistic
+		  Variation}}},
+  volume	= {41},
+  year		= {2012},
+  doi		= {10.1146/annurev-anthro-092611-145828}
+}
+
+@Book{		  finkbeiner2016pejoration,
+  address	= {Amsterdam},
+  editor	= {Finkbeiner, Rita and Meibauer, J{\"o}rg and Wiese, Heike},
+  publisher	= {John Benjamins Publishing Company},
+  series	= {Linguistik {{Aktuell}}/{{Linguistics Today}}},
+  title		= {Pejoration},
+  volume	= {228},
+  year		= {2016},
+  doi		= {10.1075/la.228}
+}
+
+@Book{		  gelman2021data,
+  address	= {Cambridge},
+  author	= {Gelman, Andrew and Hill, Jennifer},
+  edition	= {23rd printing},
+  publisher	= {Cambridge Univ. Press},
+  series	= {Analytical Methods for Social Research},
+  title		= {Data Analysis Using Regression and Multilevel/Hierarchical
+		  Models},
+  year		= {2021}
+}
+
+@Article{	  grove2025factivity,
+  author	= {Grove, Julian and White, Aaron Steven},
+  journal	= {Natural Language Semantics},
+  title		= {Factivity, Presupposition Projection, and the Role of
+		  Discrete Knowledge in Gradient Inference Judgments},
+  year		= {2025},
+  doi		= {10.1007/s11050-025-09244-9}
+}
+
+@Book{		  remysen2025redonner,
+  address	= {Montr\'eal},
+  editor	= {Remysen, Wim and Blondeau, H{\'e}l{\`e}ne and Laforest,
+		  Marty},
+  publisher	= {Les Presses de l'Universit\'e de Montr\'eal},
+  title		= {{(Re)donner la parole aux corpus montr\'ealais: regards
+		  r\'etrospectif et prospectif}},
+  year		= {2025}
+}
+
+@Article{	  sorensen2016bayesian,
+  author	= {Sorensen, Tanner and Hohenstein, Sven and Vasishth,
+		  Shravan},
+  journal	= {The Quantitative Methods for Psychology},
+  number	= {3},
+  pages		= {175--200},
+  title		= {Bayesian Linear Mixed Models Using {{Stan}}: {{A}}
+		  Tutorial for Psychologists, Linguists, and Cognitive
+		  Scientists},
+  volume	= {12},
+  year		= {2016},
+  doi		= {10.20982/tqmp.12.3.p175}
+}
+
 @Article{	  eguren2010contrastive,
   author	= {Eguren, Luis},
   journal	= {Lingua},
