--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,39 @@
 
+@Book{		  mcelreath2020statistical,
+  address	= {Boca Raton},
+  author	= {McElreath, Richard},
+  edition	= {Second edition},
+  publisher	= {Chapman \& Hall/CRC},
+  series	= {Texts in Statistical Science},
+  title		= {Statistical Rethinking: A {{Bayesian}} Course with
+		  Examples in {{R}} and {{Stan}}},
+  year		= {2020}
+}
+
+@Article{	  nicenboim2016statistical,
+  author	= {Nicenboim, Bruno and Vasishth, Shravan},
+  journal	= {Language and Linguistics Compass},
+  number	= {11},
+  pages		= {591--613},
+  title		= {Statistical Methods for Linguistic Research:
+		  {{Foundational Ideas}}---{{Part II}}},
+  volume	= {10},
+  year		= {2016},
+  doi		= {10.1111/lnc3.12207}
+}
+
+@Article{	  vasishth2016statistical,
+  author	= {Vasishth, Shravan and Nicenboim, Bruno},
+  journal	= {Language and Linguistics Compass},
+  number	= {8},
+  pages		= {349--369},
+  title		= {Statistical {{Methods}} for {{Linguistic Research}}:
+		  {{Foundational Ideas}} -- {{Part I}}},
+  volume	= {10},
+  year		= {2016},
+  doi		= {10.1111/lnc3.12201}
+}
+
 @Article{	  abbou2017typographies,
   author	= {Abbou, Julie},
   journal	= {Mots. Les langages du politique},
