--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,51 @@
 
+@Article{	  neu2025direct,
+  author	= {Neu, Eva},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {5},
+  title		= {Direct Causatives of Unergatives: A View from Variable
+		  Unaccusativity},
+  volume	= {44},
+  year		= {2025}
+}
+
+@Article{	  gygax2008generically,
+  author	= {Gygax, Pascal and Gabriel, Ute and Sarrasin, Oriane and
+		  Oakhill, Jane and Garnham, Alan},
+  journal	= {Language and Cognitive Processes},
+  number	= {3},
+  pages		= {464--485},
+  title		= {Generically Intended, but Specifically Interpreted: When
+		  Beauticians, Musicians, and Mechanics Are All Men},
+  volume	= {23},
+  year		= {2008}
+}
+
+@Article{	  flaherty2001how,
+  author	= {Flaherty, Mary},
+  journal	= {Journal of Cross-Cultural Psychology},
+  number	= {1},
+  pages		= {18--31},
+  title		= {How a Language Gender System Creeps into Perception},
+  volume	= {32},
+  year		= {2001}
+}
+
+@Article{	  carreiras1996use,
+  author	= {Carreiras, Manuel and Garnham, Alan and Oakhill, Jane and
+		  Cain, Kate},
+  journal	= {The Quarterly Journal of Experimental Psychology Section
+		  A},
+  number	= {3},
+  pages		= {639--663},
+  title		= {The Use of Stereotypical Gender Information in
+		  Constructing a Mental Model: Evidence from English and
+		  Spanish},
+  volume	= {49},
+  year		= {1996}
+}
+
 @Book{		  mcelreath2020statistical,
   address	= {Boca Raton},
   author	= {McElreath, Richard},
