--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,90 @@
 
+@Article{	  bleotu2025children,
+  author	= {Bleotu, Adina Camelia and Tieu, Lyn and Benz, Anton and
+		  Cremers, Alexandre and B{\^\i}lb{\^\i}ie, Gabriela and
+		  Panaitescu, Mara and Ivan, Rudmila Rodica and Nicolae,
+		  Andreea Cristina},
+  journal	= {Journal of Semantics},
+  pages		= {ffaf011},
+  title		= {Children Interpret Some Disjunctions Conjunctively:
+		  Evidence from Child Romanian},
+  year		= {2025}
+}
+
+@InBook{	  soh2023mandarin,
+  author	= {Soh, Hooi Ling},
+  editor	= {McCready, Elin and Nomoto, Hiroki},
+  publisher	= {Routledge},
+  title		= {Mandarin Chinese Sentence-Final de as a Marker of Private
+		  Evidence Discourse Particles in Asian Languages Volume
+		  {I}},
+  year		= {2023}
+}
+
+@Article{	  jin2020copula,
+  author	= {Jin, Dawei},
+  journal	= {Folia Linguistica},
+  number	= {1},
+  pages		= {89--132},
+  title		= {Copula Functions in a Cross-Sinitic Perspective},
+  volume	= {54},
+  year		= {2020}
+}
+
+@Article{	  zhan2013copula,
+  author	= {Zhan, Fangqiong and Sun, Chaofen},
+  journal	= {Language and Linguistics},
+  number	= {4},
+  pages		= {755--789},
+  title		= {A Copula Analysis of Shi in the Chinese Cleft
+		  Construction},
+  volume	= {14},
+  year		= {2013}
+}
+
+@Article{	  wu2008terminability,
+  author	= {Wu, Jiun-Shiung},
+  journal	= {Journal of East Asian Linguistics},
+  number	= {1},
+  pages		= {1--32},
+  title		= {Terminability, Wholeness and Semantics of Experiential
+		  Guo},
+  volume	= {17},
+  year		= {2008}
+}
+
+@Article{	  sybesma2007whether,
+  author	= {Sybesma, Rint},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {580--587},
+  title		= {Whether We Tense-Agree Overtly or Not},
+  volume	= {38},
+  year		= {2007}
+}
+
+@Article{	  soh2007ellipsis,
+  author	= {Soh, Hooi Ling},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {178--188},
+  title		= {Ellipsis, Last Resort, and the Dummy Auxiliary Shi `Be' in
+		  Mandarin Chinese},
+  volume	= {38},
+  year		= {2007}
+}
+
+@Article{	  yeh1996analysis,
+  author	= {Yeh, Meng},
+  journal	= {Journal of East Asian Linguistics},
+  number	= {2},
+  pages		= {151--182},
+  title		= {An Analysis of the Experiential Guoexpin Mandarin: A
+		  Temporal Quantifier},
+  volume	= {5},
+  year		= {1996}
+}
+
 @Article{	  neu2025direct,
   author	= {Neu, Eva},
   journal	= {Natural Language and Linguistic Theory},
