--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,56 @@
 
+@Article{	  wu2025syntax,
+  author	= {Wu, Danfeng},
+  journal	= {Natural Language \\& Linguistic Theory},
+  number	= {1},
+  pages		= {6},
+  title		= {Syntax of Negation in Corrective but Sentences: Evidence
+		  from Syntax-Semantics and Prosody},
+  volume	= {44},
+  year		= {2025}
+}
+
+@Article{	  eguren2025prenominal,
+  author	= {Eguren, Luis and Roca, Francesc},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {7},
+  pages		= {1--26},
+  title		= {Prenominal Possessives with Indefinites in Romance},
+  volume	= {11},
+  year		= {2025}
+}
+
+@Article{	  dikken2025nonverbal,
+  author	= {den Dikken, Marcel},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {7},
+  pages		= {1--12},
+  title		= {Non-Verbal Predicate Proforms: Category, Case and
+		  $\varphi$-Feature Concord},
+  volume	= {11},
+  year		= {2025}
+}
+
+@Article{	  goncalves2025causatives,
+  author	= {Gon{\c c}alves, Anabela and Santos, Ana L{\'u}cia},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {7},
+  pages		= {1--24},
+  title		= {Causatives with Small Clause Complements},
+  volume	= {11},
+  year		= {2025}
+}
+
+@InBook{	  giusti2024determiners,
+  author	= {Giusti, Giuliana},
+  booktitle	= {Manual of Romance Word Classes},
+  editor	= {de Cesare, Anna-Maria and Salvi, Giampaolo},
+  pages		= {177-206},
+  publisher	= {De Gruyter},
+  title		= {Determiners},
+  year		= {2024}
+}
+
 @Article{	  bleotu2025children,
   author	= {Bleotu, Adina Camelia and Tieu, Lyn and Benz, Anton and
 		  Cremers, Alexandre and B{\^\i}lb{\^\i}ie, Gabriela and
