--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Book{		  giusti2020language,
+  address	= {Erscheinungsort nicht ermittelbar},
+  editor	= {Giusti, Giuliana and Iann{\`a}ccaro, Gabriele},
+  publisher	= {Fondazione Universit\`a Ca' Foscari},
+  title		= {Language, Gender and Hate Speech: A Multidisciplinary
+		  Approach},
+  volume	= {(73)},
+  year		= {2020}
+}
+
+@Book{		  giusti2015nominal,
+  address	= {Erscheinungsort nicht ermittelbar},
+  author	= {Giusti, Giuliana},
+  publisher	= {Cambridge Scholars Publishing},
+  title		= {Nominal Syntax at the Interfaces: A Comparative Analysis
+		  of Languages With Articles},
+  year		= {2015}
+}
+
 @Article{	  wu2025syntax,
   author	= {Wu, Danfeng},
   journal	= {Natural Language \\& Linguistic Theory},
